SLM-257 Wrap the email address in the nav bar to prevent overflow on small screens

--- a/assets/sass/components/_header-bar.scss
+++ b/assets/sass/components/_header-bar.scss
@@ -79,6 +79,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    word-break: break-word;
 
     @include govuk-media-query($from: tablet) {
       flex-direction: row;
